# da2cf

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  startup.py
src/da2cf/: config.py  database.py  main.py  models.py  scheduler.py  security.py  sync_service.py
src/da2cf/clients/: cloudflare.py  directadmin.py
src/da2cf/utils/: dns.py  logging.py
templates/: base.html  dashboard.html  domain_detail.html  domains.html  history.html  history_detail.html  login.html  settings_proxy.html  settings_schedule.html
tests/: conftest.py  test_cloudflare_client.py  test_directadmin_client.py  test_normalization.py  test_planner.py
